refactor: add BlockCipher interface