@@ -1,7 +1,8 @@
 package dev.masterflomaster1.jfxc.gui.page.viewmodel;
 
-import dev.masterflomaster1.jfxc.core.BlockCipherImpl;
+import dev.masterflomaster1.jfxc.core.BlockCipher;
 import dev.masterflomaster1.jfxc.core.SecurityUtils;
+import dev.masterflomaster1.jfxc.core.io.CipherNIO;
 import dev.masterflomaster1.jfxc.core.utils.StringUtils;
 import dev.masterflomaster1.jfxc.gui.MemCache;
 import javafx.animation.Timeline;
@@ -15,6 +16,7 @@ import javafx.event.ActionEvent;
 import lombok.Getter;
 import lombok.Setter;
 
+import javax.crypto.Cipher;
 import java.io.File;
 import java.util.HexFormat;
 
@@ -38,36 +40,39 @@ public final class BlockCipherFilesViewModel extends AbstractViewModel {
     @Setter private File targetFile;
     @Setter private File destinationFile;
 
+    private final CipherNIO nio = new CipherNIO();
+
     public BlockCipherFilesViewModel() {
         blockCipherAlgorithmsList.setAll(SecurityUtils.getBlockCiphers());
 
-        for (BlockCipherImpl.Padding p: BlockCipherImpl.Padding.values()) {
+        for (BlockCipher.Padding p: BlockCipher.Padding.values()) {
             paddingsList.add(p.getPadding());
         }
-        paddingsComboBoxProperty.set(paddingsList.get(0));
+        paddingsComboBoxProperty.set(paddingsList.getFirst());
 
-        for (BlockCipherImpl.Mode m: BlockCipherImpl.Mode.values()) {
+        for (BlockCipher.Mode m: BlockCipher.Mode.values()) {
             modesList.add(m.getMode());
         }
-        modesComboBoxProperty.set(modesList.get(0));
+        modesComboBoxProperty.set(modesList.getFirst());
     }
 
     @SuppressWarnings("unused")
     public void onAlgorithmSelection(ActionEvent e) {
         var algo = blockCipherComboBoxProperty.get();
-        keyLengthList.setAll(BlockCipherImpl.getAvailableKeyLengths(algo));
-        keyLengthComboBoxProperty.set(keyLengthList.get(0)); // Select first element
+        keyLengthList.setAll(BlockCipher.getSupportedKeyLengths(algo));
+        keyLengthComboBoxProperty.set(keyLengthList.getFirst());
     }
 
     @SuppressWarnings("unused")
     public void onIvShuffleAction(ActionEvent e) {
-        var value = BlockCipherImpl.generateIV(blockCipherComboBoxProperty.get());
+        var algo = blockCipherComboBoxProperty.get();
+        var value = SecurityUtils.generateIV(BlockCipher.getBlockLength(algo));
 
         ivProperty.set(HexFormat.of().formatHex(value));
     }
 
     public boolean isNonIvModeSelected() {
-        return BlockCipherImpl.Mode.fromString(modesComboBoxProperty.get()) == BlockCipherImpl.Mode.ECB;
+        return BlockCipher.Mode.fromString(modesComboBoxProperty.get()) == BlockCipher.Mode.ECB;
     }
 
     public void action(boolean encrypt) {
@@ -82,39 +87,25 @@ public final class BlockCipherFilesViewModel extends AbstractViewModel {
         }
 
         var algo = blockCipherComboBoxProperty.get();
-        var mode = BlockCipherImpl.Mode.fromString(modesComboBoxProperty.get());
+        var mode = BlockCipher.Mode.fromString(modesComboBoxProperty.get());
 
-        if (mode != BlockCipherImpl.Mode.ECB && ivProperty.get().isEmpty()) {
+        if (mode != BlockCipher.Mode.ECB && ivProperty.get().isEmpty()) {
             emptyIvAnimation.playFromStart();
             return;
         }
 
         byte[] key = HexFormat.of().parseHex(keyProperty.get());
-        var padding = BlockCipherImpl.Padding.fromString(paddingsComboBoxProperty.get());
+        var padding = BlockCipher.Padding.fromString(paddingsComboBoxProperty.get());
         var iv = HexFormat.of().parseHex(ivProperty.get());
 
         if (encrypt) {
-            BlockCipherImpl.nioEncrypt(
-                    targetFile.getAbsolutePath(),
-                    destinationFile.getAbsolutePath(),
-                    algo,
-                    mode,
-                    padding,
-                    iv,
-                    key
-            );
+            var enc = BlockCipher.of(algo, Cipher.ENCRYPT_MODE, mode, padding, key, iv);
+            nio.encrypt(enc, targetFile.toPath(), destinationFile.toPath());
 
             counterText.set("Encoded %s".formatted(StringUtils.convert(destinationFile.length())));
         } else {
-            BlockCipherImpl.nioDecrypt(
-                    targetFile.getAbsolutePath(),
-                    destinationFile.getAbsolutePath(),
-                    algo,
-                    mode,
-                    padding,
-                    iv,
-                    key
-            );
+            var dec = BlockCipher.of(algo, Cipher.DECRYPT_MODE, mode, padding, key, iv);
+            nio.decrypt(dec, targetFile.toPath(), destinationFile.toPath());
 
             counterText.set("Decoded %s".formatted(StringUtils.convert(destinationFile.length())));
         }
